--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/wp-source": "^1.11.5",
     "frontity": "^1.17.0",
+    "typewriter-effect": "^2.18.0",
     "upwork-site": "file:packages/upwork-site"
   }
 }
